<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
<<<<<<< HEAD
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#000000">
           <LinearLayout
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
			<TextView
		  		android:id="@+id/s1"
		  		android:text="@string/s1"
		  		android:layout_height="fill_parent"
		        android:layout_width="fill_parent"
		  		android:padding="5dip" 
		  		android:typeface="monospace"
		  		android:focusable="true"/>		  	
		  	<View
        		android:layout_height="2dip"
        		android:background="#FF909090"
        		android:layout_width="fill_parent"
        		android:fadingEdge="horizontal"/>
		  	<TextView
		  		android:id="@+id/s2"
		  		android:text="@string/s2"
		  		android:layout_height="fill_parent"
		        android:layout_width="fill_parent"
		  		android:padding="5dip" 
		  		android:typeface="monospace"
		  		android:focusable="true"/>	
		  	<View
        		android:layout_height="2dip"
        		android:background="#FF909090"
        		android:layout_width="fill_parent"/>
		  	<TextView
		  		android:id="@+id/s3"
		  		android:text="@string/s3"
		  		android:layout_height="fill_parent"
		        android:layout_width="fill_parent"
		  		android:padding="5dip" 
		  		android:typeface="monospace"
		  		android:focusable="true"/>
		  	<View
        		android:layout_height="2dip"
        		android:background="#FF909090"
        		android:layout_width="fill_parent"/>
		  	<TextView
		  		android:id="@+id/s4"
		  		android:text="@string/s4"
		  		android:layout_height="fill_parent"
		        android:layout_width="fill_parent"
		  		android:padding="5dip" 
		  		android:typeface="monospace"
		  		android:focusable="true"/>
		  	<View
        		android:layout_height="2dip"
        		android:background="#FF909090"
        		android:layout_width="fill_parent"/>	
		  	<TextView
		  		android:id="@+id/s5"
		  		android:text="@string/s5"
		  		android:layout_height="fill_parent"
		        android:layout_width="fill_parent"
		  		android:padding="5dip" 
		  		android:typeface="monospace"
		  		android:focusable="true"/>
		  	<View
        		android:layout_height="2dip"
        		android:background="#FF909090"
        		android:layout_width="fill_parent"/>
		  	<TextView
		  		android:id="@+id/s6"
		  		android:text="@string/s6"  		
		  		android:layout_height="fill_parent"
		        android:layout_width="fill_parent"
		  		android:padding="5dip" 
		  		android:typeface="monospace"
		  		android:focusable="true"/>
		  	<View
        		android:layout_height="2dip"
        		android:background="#FF909090"
        		android:layout_width="fill_parent"/>
		  	<TextView
		  		android:id="@+id/s7"
		  		android:text="@string/s7"
		  		android:layout_height="fill_parent"
		        android:layout_width="fill_parent"
		  		android:padding="5dip" 
		  		android:typeface="monospace"
		  		android:focusable="true"/>
		  	<View
        		android:layout_height="2dip"
        		android:background="#FF909090"
        		android:layout_width="fill_parent"/>
		  	<TextView
		  		android:id="@+id/s8"
		  		android:text="@string/s8"
		  		android:layout_height="fill_parent"
		        android:layout_width="fill_parent"
		  		android:padding="5dip" 
		  		android:typeface="monospace"
		  		android:focusable="true"/>
		  	<View
        		android:layout_height="2dip"
        		android:background="#FF909090"
        		android:layout_width="fill_parent"/>
		  	<TextView
		  		android:id="@+id/s9"
		  		android:text="@string/s9"
		  		android:layout_height="fill_parent"
		        android:layout_width="fill_parent"
		  		android:padding="5dip" 
		  		android:typeface="monospace"
		  		android:focusable="true"/>
		  	<View
        		android:layout_height="2dip"
        		android:background="#FF909090"
        		android:layout_width="fill_parent"/>
		  	<TextView
		  		android:id="@+id/s10"
		  		android:text="@string/s10"
		  		android:layout_height="fill_parent"
		        android:layout_width="fill_parent"
		  		android:padding="5dip" 
		  		android:typeface="monospace"
		  		android:focusable="true"/>
		 	<View
        		android:layout_height="2dip"
        		android:background="#FF909090"
        		android:layout_width="fill_parent"/> 	
		  	<TextView
		  		android:id="@+id/s11"
		  		android:text="@string/s11"
		  		android:layout_height="fill_parent"
		        android:layout_width="fill_parent"
		  		android:padding="5dip" 
		  		android:typeface="monospace"
		  		android:focusable="true"/>
		  	<View
        		android:layout_height="2dip"
        		android:background="#FF909090"
        		android:layout_width="fill_parent"/>
		  	<TextView
		  		android:id="@+id/s12"
		  		android:text="@string/s12"
		  		android:layout_height="fill_parent"
		        android:layout_width="fill_parent"
		  		android:padding="5dip" 
		  		android:typeface="monospace"
		  		android:focusable="true"/>
		  	<View
        		android:layout_height="2dip"
        		android:background="#FF909090"
        		android:layout_width="fill_parent"/>	
		  	<TextView
		  		android:id="@+id/s13"
		  		android:text="@string/s13"
		  		android:layout_height="fill_parent"
		        android:layout_width="fill_parent"
		  		android:padding="5dip" 
		  		android:typeface="monospace"
		  		android:focusable="true"/>
		  	<View
        		android:layout_height="2dip"
        		android:background="#FF909090"
        		android:layout_width="fill_parent"/>
		  	<TextView
		  		android:id="@+id/s14"
		  		android:text="@string/s14"
		  		android:layout_height="fill_parent"
		        android:layout_width="fill_parent"
		  		android:padding="5dip" 
		  		android:typeface="monospace"
		  		android:focusable="true"/>
			<View
        		android:layout_height="2dip"
        		android:background="#FF909090"
        		android:layout_width="fill_parent"/>	  	
		  	<TextView
		  		android:id="@+id/s15"
		  		android:text="@string/s15"
		  		android:layout_height="fill_parent"
		        android:layout_width="fill_parent"
		  		android:padding="5dip" 
		  		android:typeface="monospace"
		  		android:focusable="true"/>
			<View
        		android:layout_height="2dip"
        		android:background="#FF909090"
        		android:layout_width="fill_parent"/>	 
		  	<TextView
		  		android:id="@+id/s16"
		  		android:text="@string/s16"
		  		android:layout_height="fill_parent"
		        android:layout_width="fill_parent"
		  		android:padding="5dip" 
		  		android:typeface="monospace"
		  		android:focusable="true"/>
		  </LinearLayout>
  		</ScrollView>
  	</LinearLayout>
</LinearLayout>
=======
    android:id="@android:id/list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" />
>>>>>>> a5999524a5822b25ad71221fddec2b5cbd060e45
